--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "i18n-ally.keystyle": "nested",
   "i18n-ally.pathMatcher": "{locale}.json",
   "i18n-ally.extract.autoDetect": true,
-  "i18n-ally.enabledFrameworks": ["react-i18next", "i18next", "react"],
+  "i18n-ally.enabledFrameworks": ["react-i18next", "i18next", "react", "vscode"],
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "biomejs.biome",
   "[javascript]": {
