--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,72 +28,72 @@
     "cli": "tsx src/cli.ts"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.11",
-    "@hono/node-server": "^1.13.7",
-    "@hono/node-ws": "^1.0.5",
-    "@hono/swagger-ui": "^0.4.1",
-    "@hono/zod-openapi": "^0.18.0",
-    "@hono/zod-validator": "^0.4.1",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/auto-instrumentations-node": "^0.50.2",
-    "@opentelemetry/auto-instrumentations-web": "^0.41.0",
-    "@opentelemetry/context-zone": "^1.26.0",
-    "@opentelemetry/core": "^1.26.0",
-    "@opentelemetry/exporter-metrics-otlp-proto": "^0.53.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.53.0",
-    "@opentelemetry/instrumentation": "^0.53.0",
-    "@opentelemetry/instrumentation-generic-pool": "^0.39.0",
-    "@opentelemetry/resources": "^1.26.0",
-    "@opentelemetry/sdk-metrics": "^1.26.0",
-    "@opentelemetry/sdk-node": "^0.53.0",
-    "@opentelemetry/sdk-trace-base": "^1.26.0",
-    "@opentelemetry/sdk-trace-node": "^1.26.0",
-    "@opentelemetry/sdk-trace-web": "^1.26.0",
-    "@opentelemetry/semantic-conventions": "^1.27.0",
-    "@sentry/node": "^8.47.0",
-    "ai": "^4.0.22",
-    "argon2": "^0.41.1",
+    "@ai-sdk/openai": "1.0.11",
+    "@hono/node-server": "1.13.7",
+    "@hono/node-ws": "1.0.5",
+    "@hono/swagger-ui": "0.5.0",
+    "@hono/zod-openapi": "0.18.3",
+    "@hono/zod-validator": "0.4.2",
+    "@opentelemetry/api": "1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "0.50.2",
+    "@opentelemetry/auto-instrumentations-web": "0.41.0",
+    "@opentelemetry/context-zone": "1.26.0",
+    "@opentelemetry/core": "1.26.0",
+    "@opentelemetry/exporter-metrics-otlp-proto": "0.53.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "0.53.0",
+    "@opentelemetry/instrumentation": "0.53.0",
+    "@opentelemetry/instrumentation-generic-pool": "0.39.0",
+    "@opentelemetry/resources": "1.26.0",
+    "@opentelemetry/sdk-metrics": "1.26.0",
+    "@opentelemetry/sdk-node": "0.53.0",
+    "@opentelemetry/sdk-trace-base": "1.26.0",
+    "@opentelemetry/sdk-trace-node": "1.26.0",
+    "@opentelemetry/sdk-trace-web": "1.26.0",
+    "@opentelemetry/semantic-conventions": "1.27.0",
+    "@sentry/node": "8.47.0",
+    "ai": "4.0.22",
+    "argon2": "0.41.1",
     "better-auth": "catalog:",
     "blockly": "catalog:",
-    "commander": "^12.1.0",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
+    "commander": "12.1.0",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
     "dotenv": "catalog:",
-    "drizzle-kit": "^0.30.1",
-    "drizzle-orm": "^0.38.2",
-    "drizzle-zod": "^0.6.0",
-    "extensions": "workspace:^",
-    "fast-glob": "^3.3.2",
-    "fluent-ffmpeg": "^2.1.3",
-    "get-port": "^7.1.0",
+    "drizzle-kit": "0.30.1",
+    "drizzle-orm": "0.38.2",
+    "drizzle-zod": "0.6.0",
+    "extensions": "workspace:",
+    "fast-glob": "3.3.2",
+    "fluent-ffmpeg": "2.1.3",
+    "get-port": "7.1.0",
     "hono": "catalog:",
-    "http-proxy": "^1.18.1",
-    "http-proxy-middleware": "^3.0.3",
-    "inquirer": "^12.3.0",
-    "js-yaml": "^4.1.0",
-    "kuromoji": "^0.1.2",
-    "nanoid": "^5.0.9",
-    "openai": "^4.77.0",
-    "pg": "^8.13.1",
-    "rehype-raw": "^7.0.0",
+    "http-proxy": "1.18.1",
+    "http-proxy-middleware": "3.0.3",
+    "inquirer": "12.3.0",
+    "js-yaml": "4.1.0",
+    "kuromoji": "0.1.2",
+    "nanoid": "5.0.9",
+    "openai": "4.77.0",
+    "pg": "8.13.1",
+    "rehype-raw": "7.0.0",
     "rfc6902": "catalog:",
-    "socket.io": "^4.8.1",
-    "tiny-worker": "^2.3.0",
+    "socket.io": "4.8.1",
+    "tiny-worker": "2.3.0",
     "tsx": "catalog:",
-    "uuid": "^9.0.1",
-    "uuidv7": "^1.0.2",
+    "uuid": "9.0.1",
+    "uuidv7": "1.0.2",
     "zod": "catalog:",
-    "zod-to-json-schema": "^3.24.1"
+    "zod-to-json-schema": "3.24.1"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/fluent-ffmpeg": "^2.1.27",
-    "@types/http-proxy": "^1.17.15",
-    "@types/js-yaml": "^4.0.9",
-    "@types/kuromoji": "^0.1.3",
+    "@types/cors": "2.8.17",
+    "@types/fluent-ffmpeg": "2.1.27",
+    "@types/http-proxy": "1.17.15",
+    "@types/js-yaml": "4.0.9",
+    "@types/kuromoji": "0.1.3",
     "@types/node": "catalog:",
-    "@types/pg": "^8.11.10",
-    "@types/uuid": "^9.0.8",
+    "@types/pg": "8.11.10",
+    "@types/uuid": "9.0.8",
     "typescript": "catalog:"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
