--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,96 +10,96 @@
     "tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "@axe-core/playwright": "^4.10.1",
-    "@blockly/field-grid-dropdown": "^5.0.9",
-    "@blockly/field-slider": "^7.0.9",
-    "@hookform/resolvers": "^3.9.1",
-    "@mdxeditor/editor": "^3.14.0",
-    "@radix-ui/react-accordion": "^1.2.1",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-progress": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-visually-hidden": "^1.1.0",
-    "@reactour/tour": "^3.7.0",
-    "@sentry/react": "^8.34.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-query": "^5.61.0",
-    "@tanstack/react-query-devtools": "^5.62.7",
-    "@tanstack/react-router": "^1.90.0",
-    "@tanstack/react-table": "^8.20.5",
-    "@tanstack/react-virtual": "^3.10.8",
-    "@tanstack/router-vite-plugin": "^1.87.13",
-    "@tanstack/zod-adapter": "^1.92.6",
-    "@vitejs/plugin-react": "^4.3.2",
-    "@xyflow/react": "^12.3.2",
-    "autoprefixer": "^10.4.20",
-    "backend": "workspace:^",
+    "@axe-core/playwright": "4.10.1",
+    "@blockly/field-grid-dropdown": "5.0.9",
+    "@blockly/field-slider": "7.0.9",
+    "@hookform/resolvers": "3.9.1",
+    "@mdxeditor/editor": "3.14.0",
+    "@radix-ui/react-accordion": "1.2.1",
+    "@radix-ui/react-avatar": "1.1.2",
+    "@radix-ui/react-dialog": "1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-progress": "1.1.0",
+    "@radix-ui/react-slot": "1.1.1",
+    "@radix-ui/react-switch": "1.1.1",
+    "@radix-ui/react-tabs": "1.1.1",
+    "@radix-ui/react-toast": "1.2.4",
+    "@radix-ui/react-visually-hidden": "1.1.0",
+    "@reactour/tour": "3.7.0",
+    "@sentry/react": "8.34.0",
+    "@tailwindcss/typography": "0.5.15",
+    "@tanstack/react-query": "5.61.0",
+    "@tanstack/react-query-devtools": "5.62.7",
+    "@tanstack/react-router": "1.90.0",
+    "@tanstack/react-table": "8.20.5",
+    "@tanstack/react-virtual": "3.10.8",
+    "@tanstack/router-vite-plugin": "1.87.13",
+    "@tanstack/zod-adapter": "1.92.6",
+    "@vitejs/plugin-react": "4.3.2",
+    "@xyflow/react": "12.3.2",
+    "autoprefixer": "10.4.20",
+    "backend": "workspace:",
     "better-auth": "catalog:",
     "blockly": "catalog:",
-    "boring-avatars": "^1.11.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
-    "cors": "^2.8.5",
-    "cross-env": "^7.0.3",
-    "dom-to-image-more": "^3.5.0",
+    "boring-avatars": "1.11.2",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "cmdk": "1.0.4",
+    "cors": "2.8.5",
+    "cross-env": "7.0.3",
+    "dom-to-image-more": "3.5.0",
     "dotenv": "catalog:",
-    "extensions": "workspace:^",
-    "fast-glob": "^3.3.2",
-    "html2canvas": "^1.4.1",
-    "i18next": "^23.16.0",
-    "i18next-browser-languagedetector": "^8.0.2",
-    "i18next-fs-backend": "^2.3.2",
-    "idb": "^8.0.0",
-    "jotai": "^2.10.1",
-    "js-yaml": "^4.1.0",
-    "kuromoji": "^0.1.2",
-    "lucide-react": "^0.381.0",
-    "nodemon": "^3.1.7",
-    "postcss": "^8.4.47",
-    "react": "^18.3.1",
-    "react-cookie": "^7.2.1",
-    "react-dom": "^18.3.1",
-    "react-ga4": "^2.1.0",
-    "react-hook-form": "^7.54.2",
-    "react-i18next": "^14.1.3",
-    "react-markdown": "^9.0.1",
-    "react-remark": "^2.1.0",
-    "react-resizable-panels": "^2.1.4",
-    "react-tag-input": "^6.10.3",
-    "rehype-raw": "^7.0.0",
+    "extensions": "workspace:",
+    "fast-glob": "3.3.2",
+    "html2canvas": "1.4.1",
+    "i18next": "23.16.0",
+    "i18next-browser-languagedetector": "8.0.2",
+    "i18next-fs-backend": "2.3.2",
+    "idb": "8.0.0",
+    "jotai": "2.10.1",
+    "js-yaml": "4.1.0",
+    "kuromoji": "0.1.2",
+    "lucide-react": "0.381.0",
+    "nodemon": "3.1.7",
+    "postcss": "8.4.47",
+    "react": "18.3.1",
+    "react-cookie": "7.2.1",
+    "react-dom": "18.3.1",
+    "react-ga4": "2.1.0",
+    "react-hook-form": "7.54.2",
+    "react-i18next": "14.1.3",
+    "react-markdown": "9.0.1",
+    "react-remark": "2.1.0",
+    "react-resizable-panels": "2.1.4",
+    "react-tag-input": "6.10.3",
+    "rehype-raw": "7.0.0",
     "rfc6902": "catalog:",
-    "socket.io-client": "^4.8.0",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss": "^3.4.14",
-    "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.1",
-    "vite": "^5.4.9",
-    "vite-plugin-pwa": "^0.20.5",
-    "vite-plugin-svgr": "^4.2.0",
-    "vite-tsconfig-paths": "^5.0.1",
-    "wavesurfer.js": "^7.8.7",
+    "socket.io-client": "4.8.0",
+    "tailwind-merge": "2.5.5",
+    "tailwindcss": "3.4.14",
+    "tailwindcss-animate": "1.0.7",
+    "tsx": "4.19.1",
+    "vite": "5.4.9",
+    "vite-plugin-pwa": "0.20.5",
+    "vite-plugin-svgr": "4.2.0",
+    "vite-tsconfig-paths": "5.0.1",
+    "wavesurfer.js": "7.8.7",
     "zod": "catalog:",
-    "zod-i18n-map": "^2.27.0"
+    "zod-i18n-map": "2.27.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.49.1",
-    "@tanstack/router-devtools": "^1.90.0",
-    "@tanstack/router-plugin": "^1.87.13",
-    "@types/kuromoji": "^0.1.3",
+    "@playwright/test": "1.49.1",
+    "@tanstack/router-devtools": "1.90.0",
+    "@tanstack/router-plugin": "1.87.13",
+    "@types/kuromoji": "0.1.3",
     "@types/node": "catalog:",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
-    "@types/uuid": "^9.0.8",
-    "axe-html-reporter": "^2.2.11",
-    "rollup-plugin-visualizer": "^5.12.0",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "@types/uuid": "9.0.8",
+    "axe-html-reporter": "2.2.11",
+    "rollup-plugin-visualizer": "5.12.0",
     "typescript": "catalog:"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
