--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -7,11 +7,11 @@
     ".": "./dist/index.js"
   },
   "dependencies": {
-    "@blockly/field-grid-dropdown": "^5.0.9",
-    "@blockly/field-slider": "^7.0.9",
+    "@blockly/field-grid-dropdown": "5.0.9",
+    "@blockly/field-slider": "7.0.9",
     "blockly": "catalog:",
     "hono": "catalog:",
-    "uuidv7": "^1.0.2"
+    "uuidv7": "1.0.2"
   },
   "devDependencies": {
     "@types/node": "catalog:",
