--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -6,17 +6,17 @@
     // "allowImportingTsExtensions": true,
     // "noEmit": true,
 
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
+    // "esModuleInterop": false,
+    // "allowSyntheticDefaultImports": true,
 
     "strict": true,
     "skipLibCheck": true,
     "types": ["node"],
-    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
     "jsxImportSource": "hono/jsx"
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
