--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -31,7 +31,6 @@
     "@ai-sdk/openai": "1.0.11",
     "@hono/node-server": "1.13.7",
     "@hono/node-ws": "1.0.5",
-    "@hono/swagger-ui": "0.5.0",
     "@hono/zod-openapi": "0.18.3",
     "@hono/zod-validator": "0.4.2",
     "@opentelemetry/api": "1.9.0",
@@ -50,9 +49,11 @@
     "@opentelemetry/sdk-trace-node": "1.26.0",
     "@opentelemetry/sdk-trace-web": "1.26.0",
     "@opentelemetry/semantic-conventions": "1.27.0",
+    "@scalar/hono-api-reference": "^0.5.169",
     "@sentry/node": "8.47.0",
     "ai": "4.0.22",
     "argon2": "0.41.1",
+    "atlassian-openapi": "^1.0.20",
     "better-auth": "catalog:",
     "blockly": "catalog:",
     "commander": "12.1.0",
@@ -74,6 +75,7 @@
     "kuromoji": "0.1.2",
     "nanoid": "5.0.9",
     "openai": "4.77.0",
+    "openapi-merge": "^1.3.3",
     "pg": "8.13.1",
     "rehype-raw": "7.0.0",
     "rfc6902": "catalog:",
