🔧 Configure TypeScript to improve error reporting

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -10,6 +10,7 @@
     },
     "skipLibCheck": true,
     "allowImportingTsExtensions": true,
+    "noErrorTruncation": true,
 
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
