--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "format": "biome format . --write",
     "check": "biome check . --fix",
     "lint:repo": "sherif",
-    "build:all": "pnpm -r build"
+    "build:all": "pnpm -r build",
+    "spell": "cspell lint '**'"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm format && pnpm lint:repo && pnpm check"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "cspell": "^8.17.3",
     "sherif": "1.1.1",
     "simple-git-hooks": "2.11.1",
     "vite-tsconfig-paths": "5.0.1",
