--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,10 @@
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
-    "ignore": ["node_modules", "dist"]
+    "ignore": ["node_modules", "dist", ".astro/**"]
   },
   "linter": {
-    "ignore": ["node_modules", "dist"],
+    "ignore": ["node_modules", "dist", ".astro/**"],
     "enabled": true,
     "rules": {
       "all": true,
