--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -8,6 +8,7 @@ catalog:
   hono: 4.6.16
   rfc6902: 5.1.1
   tsx: 4.19.2
+  js-yaml: 4.1.0
   zod: 3.24.1
   "@types/node": 20.16.12
   typescript: 5.6.3
