🔧 update dev dependencies in package.json and add js-yaml from pnpm catalog

--- a/package.json
+++ b/package.json
@@ -19,16 +19,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@testing-library/react": "^16.2.0",
+    "@vitejs/plugin-react": "4.3.2",
     "cspell": "^8.17.3",
-    "js-yaml": "4.1.0",
+    "js-yaml": "catalog:",
+    "jsdom": "^26.0.0",
     "sherif": "1.1.1",
     "simple-git-hooks": "2.11.1",
     "vite-tsconfig-paths": "5.0.1",
     "vitest": "2.1.8"
-  },
-  "dependencies": {
-    "@testing-library/react": "^16.2.0",
-    "@vitejs/plugin-react": "4.3.2",
-    "jsdom": "^26.0.0"
   }
 }
