--- a/package.json
+++ b/package.json
@@ -11,21 +11,22 @@
     "format": "biome format . --write",
     "check": "biome check . --fix",
     "lint:repo": "sherif",
-    "build:all": "pnpm -r build"
+    "build:all": "pnpm -r build",
+    "spell": "cspell lint '**'"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm format && pnpm lint:repo && pnpm check"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@testing-library/react": "^16.2.0",
+    "@vitejs/plugin-react": "4.3.2",
+    "cspell": "^8.17.3",
+    "js-yaml": "catalog:",
+    "jsdom": "^26.0.0",
     "sherif": "1.1.1",
     "simple-git-hooks": "2.11.1",
     "vite-tsconfig-paths": "5.0.1",
     "vitest": "2.1.8"
-  },
-  "dependencies": {
-    "@testing-library/react": "^16.2.0",
-    "@vitejs/plugin-react": "4.3.2",
-    "jsdom": "^26.0.0"
   }
 }
