--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "start": "cross-env NODE_ENV=production vite preview",
     "build": "pnpm tsc && vite build",
-    "tsc": "tsc --noEmit"
+    "type:check": "tsc --noEmit"
   },
   "dependencies": {
     "@axe-core/playwright": "4.10.1",
