--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,13 +13,13 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/starlight": "^0.28.6",
     "@astrojs/starlight-tailwind": "^2.0.3",
-    "@astrojs/tailwind": "^5.1.4",
+    "@astrojs/tailwind": "^6.0.0",
     "astro": "^4.16.18",
     "astro-embed": "^0.7.4",
     "sharp": "^0.32.6",
     "starlight-links-validator": "^0.12.4",
     "starlight-openapi": "^0.9.0",
-    "tailwindcss": "catalog:",
+    "tailwindcss": "3.4.17",
     "typescript": "catalog:"
   }
 }
