--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -21,5 +21,8 @@
     "starlight-openapi": "^0.9.0",
     "tailwindcss": "3.4.17",
     "typescript": "catalog:"
+  },
+  "devDependencies": {
+    "vite": "5.4.9"
   }
 }
