--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -96,6 +96,7 @@
     "@types/node": "catalog:",
     "@types/pg": "8.11.10",
     "@types/uuid": "9.0.8",
+    "testcontainers": "10.17.2",
     "typescript": "catalog:"
   },
   "packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
