test(vitest configurations): implement backend testing
- Add .env.test file for backend testing- Modify Vitest configs to load test environment variables-
Update database utility functions to use new environment variable names- Adjust database setup and
truncate functions for testing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "packageManager": "pnpm@9.6.0",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "test": "vitest",
+    "test": "vitest run",
     "prepare": "pnpm simple-git-hooks",
     "format": "biome format . --write",
     "check": "biome check . --fix",
