--- a/packages/extensions/package.json
+++ b/packages/extensions/package.json
@@ -24,7 +24,7 @@
   "wireit": {
     "build": {
       "command": "tsc -p tsconfig.build.json",
-      "files": ["src", "tsconfig.json", "package.json"],
+      "files": ["src", "tsconfig.build.json", "package.json"],
       "output": ["dist"]
     },
     "type:check": {
