chore: remove extensions type check from wireit configuration

--- a/package.json
+++ b/package.json
@@ -44,11 +44,7 @@
       "dependencies": ["./apps/backend:dev", "./apps/frontend:dev"]
     },
     "type:check": {
-      "dependencies": [
-        "./packages/extensions:type:check",
-        "./apps/backend:type:check",
-        "./apps/frontend:type:check"
-      ]
+      "dependencies": ["./apps/backend:type:check", "./apps/frontend:type:check"]
     }
   },
   "commitlint": {
