chore: wireit monorepo (#122)
* chore: wireit monorepo

* fix: type check

* fix: files

* chore: remove extensions type check from wireit configuration

---------

Co-authored-by: soumame <sou.tokumaru@gmail.com>

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format": "biome format . --write",
     "check": "biome check . --fix",
     "lint:repo": "sherif",
-    "build:all": "pnpm -r build",
-    "spell": "cspell lint '**'",
+    "dev": "wireit",
+    "type:check": "wireit",
+    "build": "pnpm -r build",
+    "spell-check": "cspell lint \"**\"",
     "commit": "cz"
   },
   "simple-git-hooks": {
@@ -34,7 +36,16 @@
     "sherif": "1.1.1",
     "simple-git-hooks": "2.11.1",
     "vite-tsconfig-paths": "5.0.1",
-    "vitest": "2.1.8"
+    "vitest": "2.1.8",
+    "wireit": "0.14.11"
+  },
+  "wireit": {
+    "dev": {
+      "dependencies": ["./apps/backend:dev", "./apps/frontend:dev"]
+    },
+    "type:check": {
+      "dependencies": ["./apps/backend:type:check", "./apps/frontend:type:check"]
+    }
   },
   "commitlint": {
     "extends": ["@commitlint/config-conventional"]
