--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions: write-all
-    environment: dev
+    environment: production
+    env:
+      OPENAPI_DOCS_URL: ${{ vars.OPENAPI_DOCS_URL }}
 
 
     steps:
