--- a/.github/workflows/dev_deploy.yaml
+++ b/.github/workflows/dev_deploy.yaml
@@ -8,7 +8,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions: write-all
-    environment: production
+    environment: dev
+    env:
+      OPENAPI_DOCS_URL: ${{ vars.OPENAPI_DOCS_URL }}
+
+      
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
