fix: add OPENAPI_DOCS_URL build argument for Docker and GitHub Actions
- Update Dockerfile and Dockerfile.dev to include OPENAPI_DOCS_URL build argument
- Modify GitHub Actions workflows (deploy.yaml and dev_deploy.yaml) to pass OPENAPI_DOCS_URL
- Add .env.example in docs package with default OpenAPI documentation URL

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,6 +46,8 @@ jobs:
         context: .
         file: ./Dockerfile
         target: frontend
+        build-args: |
+          OPENAPI_DOCS_URL=${{ env.OPENAPI_DOCS_URL }}
         push: true
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm_frontend:latest
@@ -57,6 +59,8 @@ jobs:
         context: .
         file: ./Dockerfile
         target: backend
+        build-args: |
+          OPENAPI_DOCS_URL=${{ env.OPENAPI_DOCS_URL }}
         push: true
         tags: |
           ${{ secrets.DOCKER_USERNAME }}/tutoriallm_api:latest
