feat: integrate MinIO for S3 storage for image / file storage and update environment variables
- Added MinIO service to docker-compose for local S3 storage.
- Updated .env.example and .env.test with S3 credentials.
- Included @aws-sdk/client-s3 dependency in backend package.json.
- Enhanced user profile image handling in frontend components to use backend URL.
- Introduced file input component for image uploads and added validation schema for image uploads.
- Updated translations for new features and error messages.

--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -8,6 +8,11 @@ DB_PORT=5432
 POSTGRES_DB="tutoriallm_db"
 DB_HOST="db.tutoriallm.local"
 
+S3_USER="s3_root"
+S3_PASSWORD="s3_password"
+S3_ACCESS_KEY_ID="s3_access_key_id"
+S3_SECRET_ACCESS_KEY="s3_secret_access_key"
+
 DOMAIN="localhost"
 EMAIL="example@example.com"
 
