--- a/apps/backend/.env.test
+++ b/apps/backend/.env.test
@@ -16,3 +16,8 @@ EMAIL="sou.tokumaru@gmail.com"
 
 DEFAULT_USER_PASSWORD="admin"
 DEFAULT_USER_NAME="Admin"
+
+S3_USER="s3_root"
+S3_PASSWORD="s3_password"
+S3_ACCESS_KEY_ID="s3_access_key_id"
+S3_SECRET_ACCESS_KEY="s3_secret_access_key"
