--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "1.0.11",
+    "@aws-sdk/client-s3": "3.758.0",
     "@hono/node-server": "1.13.8",
     "@hono/node-ws": "1.0.8",
     "@hono/zod-openapi": "0.18.4",
