--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,18 @@
 services:
+  minio:
+    image: minio/minio:latest
+    ports:
+      - 9000:9000
+      - 9001:9001
+    environment:
+      MINIO_ROOT_USER: ${S3_USER}            
+      MINIO_ROOT_PASSWORD: ${S3_PASSWORD}
+    restart: unless-stopped
+    volumes:
+      - data_minio:/export
+      - minio_config:/root/.minio
+    command: server /export --console-address ":9001"
+
   db:
     # container_name: tutoriallm_db
     image: pgvector/pgvector:pg14
@@ -67,3 +81,5 @@ services:
 
 volumes:
   db_data_db:
+  data_minio:
+  minio_config:
