--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "1.3.20",
+    "@aws-sdk/client-s3": "3.758.0",
     "@hono/node-server": "1.14.1",
     "@hono/node-ws": "1.1.2",
     "@hono/zod-openapi": "0.19.5",
