--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -99,8 +99,9 @@
     "@tanstack/router-plugin": "1.87.13",
     "@types/kuromoji": "0.1.3",
     "@types/node": "catalog:",
-    "@types/react": "18.3.20",
-    "@types/react-dom": "18.3.6",
+    "@types/react": "18.3.18",
+    "@types/react-avatar-editor": "13.0.4",
+    "@types/react-dom": "18.3.5",
     "@types/uuid": "9.0.8",
     "axe-html-reporter": "2.2.11",
     "msw": "2.7.5",
