fix: update dependencies and improve project configuration
- Added Vite version 6.0.2 to pnpm-lock.yaml and pnpm-workspace.yaml.- Updated backend package.json
to use ai version 4.3.11.- Removed outdated test file for image module.- Refactored image handling
in index.ts to ensure proper type casting.- Enhanced Astro configuration with Tailwind CSS
integration and updated sidebar component for better route handling.- Updated documentation
components and fixed import paths for Contributors.- Removed unused CSS files and components to
streamline the project structure.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -84,7 +84,7 @@
     "tailwindcss": "catalog:",
     "tailwindcss-animate": "1.0.7",
     "tsx": "catalog:",
-    "vite": "5.4.9",
+    "vite": "catalog:",
     "vite-plugin-pwa": "0.20.5",
     "vite-plugin-svgr": "4.2.0",
     "vite-tsconfig-paths": "5.0.1",
