--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage.enabled true",
     "prepare": "pnpm simple-git-hooks",
     "format": "biome format . --write",
     "check": "biome check . --fix",
