chore: update project configuration and add coverage support
- Added 'coverage' to .gitignore to exclude test coverage files.- Updated package.json to include
'@vitest/coverage-v8' for enhanced test coverage reporting.- Reformatted dependencies in
package.json for better readability.- Updated backend package.json to specify a version for
'@types/node'.

--- a/biome.json
+++ b/biome.json
@@ -7,10 +7,10 @@
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
-    "ignore": ["node_modules", "dist", ".astro/**", "*.astro"]
+    "ignore": ["node_modules", "dist", ".astro/**", "*.astro", "coverage"]
   },
   "linter": {
-    "ignore": ["node_modules", "dist", ".astro/**", "*.astro"],
+    "ignore": ["node_modules", "dist", ".astro/**", "*.astro", "coverage"],
     "enabled": true,
     "rules": {
       "all": true,
