--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -94,7 +94,7 @@
     "@types/http-proxy": "1.17.16",
     "@types/js-yaml": "4.0.9",
     "@types/kuromoji": "0.1.3",
-    "@types/node": "catalog:",
+    "@types/node": "^20.0.0",
     "@types/pg": "8.11.14",
     "@types/uuid": "9.0.8",
     "testcontainers": "10.24.2",
