chore: add build step for packages in GitHub Actions workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      # Some packages are required to be built before running tests(e.g. extensions)
+      - name: Build packages
+        run: pnpm build
+
       - name: Run Vitest
         run: pnpm test:coverage
 
