--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage.enabled true",
     "prepare": "pnpm simple-git-hooks",
     "format": "biome format . --write",
     "check": "biome check . --fix",
@@ -30,6 +31,7 @@
     "@testing-library/react": "16.3.0",
     "@testing-library/user-event": "14.6.1",
     "@vitejs/plugin-react": "4.3.4",
+    "@vitest/coverage-v8": "3.1.2",
     "commitizen": "4.3.1",
     "cspell": "8.19.2",
     "cz-conventional-changelog": "3.3.0",
