build: update docker-compose files to remove hardcoded backend URL
- Removed hardcoded VITE_BACKEND_URL from docker-compose files for better flexibility.- Added expose
directive for the frontend service to allow access to port 3000.

#324

--- a/docker-compose.dev.override.yml
+++ b/docker-compose.dev.override.yml
@@ -11,9 +11,11 @@ services:
       - /pnpm/store:/pnpm/store
     command: pnpm dev
     environment:
-      - VITE_BACKEND_URL=http://localhost:3001
+      - VITE_BACKEND_URL
     ports:
       - "3000:3000"
+    expose:
+      - 3000
 
   backend:
     build:
