feat: implement claude code action throughout the project
update package.json and pnpm-lock.yaml to include @anthropic-ai/claude-code dependency and improve
formatting, add GitHub workflow for claude

--- a/package.json
+++ b/package.json
@@ -58,5 +58,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@anthropic-ai/claude-code": "1.0.6"
   }
 }
