--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tutoriallm",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "private": true,
   "type": "module",
   "packageManager": "pnpm@9.6.0",
@@ -58,5 +58,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "@anthropic-ai/claude-code": "1.0.6"
   }
 }
